style.css
body {
    background-color: bisque;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#chasis {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 70px 45px 0px 45px;
    width: 522px;
    height: 865px;
    box-sizing: border-box;
    background-color: #c2bfba;
    border-radius: 20px 20px 120px 20px;
    box-shadow: 10px 10px 10px 0px black;
}

#face {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    background-color: #575763;
    width: 428px;
    height: 346px;
    box-sizing: border-box;
    padding: 0px 10px;
    /*padding: 40px 81px;*/
    border-radius: 20px 20px 80px 20px;
    box-shadow: 1px 1px 0px 0px black;
    border: 3px double goldenrod;
    position: relative;
    z-index: 10;
}

.face-text {
    color: #9396a0;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: lighter;
    font-size: 12px;
}

#screen-top {
    align-self: stretch;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 5px;
    box-sizing: border-box;
    margin: 10px;
    height: 20px;
}

.line {
    display: flex;
    flex-direction: column;
    gap: 6px;
}

.line-top {
    background-color: #721250;
    height: 2px;
}

.line-bottom {
    background-color: #07024c;
    height: 2px;
}

#line-left {
    flex: 2.5;
}

#line-right {
    flex: 1;
}

#screen-container {
    pointer-events: none;
    align-self: stretch;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    gap: 20px;
}

#battery {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 8px;
    margin-left: 10px;
}

.dot {
  height: 10px;
  width: 10px;
  background-color: #291419;
  border-radius: 50%;
}

#drawboard {
    position: relative;
    z-index: initial;
    pointer-events: none;
    height: 256px;
    width: 256px;
    border: 2px solid black;
    background-color: transparent;
    display: grid;
    grid-template-columns: repeat(16, 20px);
    grid-template-rows: repeat(16, 20px);
    box-shadow: inset 1px 1px 10px 0px black;
}

#drawboard > button {
    position: relative;
    z-index: -1;
    pointer-events: auto;
    background-color: #9bbc0f;
    border-radius: 0px;
    border: 0px;
    padding: 0px;
    transition: all 0.3s;
}

#title {
    align-self: flex-start;
    margin-top: 5px;
    margin-left: 5px;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 30px;
    color: #08167a;
    font-weight: 500;
}

#title>b {
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    font-size: 24px;
    font-weight: 100;
}

#title>sub {
    font-size: 10px;
}

#title>span {
    margin: 0px;
}

#controls {
    width: 400px;
    height: 400px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: stretch;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: 900;
    color: #08167a;
}

#controls button{
    cursor: pointer;
}

#top-controls {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

#resize {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    transform: rotate(-25deg) translateY(30px);
}

#resize-slider {
    -webkit-appearance: none;
    width: 200px;
    height: 2rem;
    background: gray;
    border-radius: 1rem;
    box-shadow: inset 1px 1px 1px 0px black;
}

#resize-slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 4rem;
    height: 4rem;
    background-color: #7d0e46;
    cursor: pointer;
    border-radius: 50%;
    box-shadow: 1px 1px 1px 0px black;
    cursor: pointer;
}

#bottom-controls {
    display: flex;
    justify-content: center;
    gap: 20px;
    margin-bottom: 70px;
}

#color-select {
    width: 128px;
    height: 128px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-content: space-between;
}

.color-button {
    width: 60px;
    height: 60px;
    border-radius: 10%;
    box-shadow: 2px 2px 2px 0px gray;
}

.color-button:hover {
    transform: translateX(-1px) translateY(-1px);
    box-shadow: 3px 3px 3px 0px gray;
}

.color-button:active {
    transform: translateX(2px) translateY(2px);
    box-shadow: 0px 0px 0px 0px gray;
}

.button-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    transform: rotate(-25deg) translateY(30px) translateX(-30px);
}

.thin-button {
    height: 16px;
    width: 67px;
    border: 0px;
    background-color: gray;
    box-shadow: 2px 2px 2px 0px black;
    border-radius: 10px;
}

.thin-button:hover {
    transform: translateX(-1px) translateY(-1px);
    box-shadow: 3px 3px 3px 0px black;
}

.thin-button:active {
    transform: translateX(2px) translateY(2px);
    box-shadow: 0px 0px 0px 0px black;
}

